[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Fonts/onlinemenu_top_info.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/Icons/bottom_icon.png" type="Texture" id=2]
[ext_resource path="res://assets/Icons/bottom_icon_2.png" type="Texture" id=3]
[ext_resource path="res://assets/Fonts/onlinemenu_general_labels.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/Scripts/OnlineMenu.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.254902, 0.254902, 0.254902, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.211765, 0.211765, 0.211765, 1 )

[sub_resource type="AnimatedTexture" id=3]
frames = 2
fps = 2.0
frame_0/texture = ExtResource( 2 )
frame_1/texture = ExtResource( 3 )
frame_1/delay_sec = 0.0

[node name="OnlineMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="towers_container" type="PanelContainer" parent="."]
anchor_right = 1.0
margin_bottom = 1370.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="towers_vbox_container" type="VBoxContainer" parent="towers_container"]
margin_right = 720.0
margin_bottom = 1370.0

[node name="towers_label" type="Label" parent="towers_container/towers_vbox_container"]
margin_right = 720.0
margin_bottom = 91.0
custom_fonts/font = ExtResource( 1 )
text = "TowerVerse"
align = 1
valign = 1

[node name="online_travellers_label" type="Label" parent="towers_container/towers_vbox_container"]
margin_top = 99.0
margin_right = 720.0
margin_bottom = 156.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
text = "Online travellers: 0"
valign = 1

[node name="guilds_container" type="PanelContainer" parent="."]
visible = false
anchor_right = 1.0
margin_bottom = 1370.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="guilds_label" type="Label" parent="guilds_container"]
margin_left = 243.0
margin_right = 476.0
margin_bottom = 91.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
text = "Guilds"
align = 1
valign = 1

[node name="bottom_container" type="PanelContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -149.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bottom_hbox_container" type="HBoxContainer" parent="bottom_container"]
margin_right = 720.0
margin_bottom = 149.0
custom_constants/separation = 40
alignment = 1

[node name="bottom_towerverse_icon" type="TextureButton" parent="bottom_container/bottom_hbox_container"]
margin_left = 295.0
margin_top = 9.0
margin_right = 425.0
margin_bottom = 139.0
size_flags_vertical = 4
texture_normal = SubResource( 3 )

[node name="tween" type="Tween" parent="."]

[connection signal="pressed" from="bottom_container/bottom_hbox_container/bottom_towerverse_icon" to="." method="_on_bottom_towerverse_icon_pressed"]
